kubernetes/eks/tidb-cluster/06-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tidb-allow-api-only
  namespace: db
spec:
  podSelector:
    matchLabels:
      pingcap.com/component: tidb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: agama
          podSelector:
            matchLabels:
              app: api
      ports:
        - protocol: TCP
          port: 4000
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: db
      ports:
        - protocol: TCP
          port: 4000
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tidb-admin
      ports:
        - protocol: TCP
          port: 10080
